Added nekogram support and more
Added Nekogram support since they removed antixposed and obfuscation since 9.5.7.

Fixed scope array with supported clients.

Use of immutable list since client list isn't dynamic for better performance.

Added logs to check obfuscation of some clients.

Bump Java version from 8 to 11.